# Raptor-Model

./: .gitignore  README.md  TODO.md  chatbot_app.py  pyproject.toml
Foundations of Sovereign Cognitive Infrastructure/: 0-foundational-principles.md  1-technical-architecture.md  2-implementation-guide.md  3-executive-summary.md  4-appendices.md  5-strategic-objectives-mrp.md  6-mrp-foundational-disassociation.md  README.md  SOVEREIGN_INTERFACE_execution_plan.md
issues/5/: comments.md
plans/: sovereign-synthesis-execution-plan.md
src/: __init__.py
src/chatbot/: __init__.py  app.py  engine.py  knowledge.py
src/chatbot/static/: chat.js  style.css
src/chatbot/templates/: index.html
src/sovereign_shield/: __init__.py  bark.py  bio_hash.py  chatbot.py  config.py  core.py  inevitability_gate.py  proof_chain.py  response_policy.py
tests/: test_chatbot.py
